<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SettingsActivity"
    tools:showIn="@layout/app_bar_settings"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_settings"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_language"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_language_value"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"/>
    <View
        android:id="@+id/linea1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorPlomo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_coin"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_coin_value"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"/>

    <View
        android:id="@+id/linea2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorPlomo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_version"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_app_version"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp" />

</LinearLayout>
