<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/pbRegistrer"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimaryDark"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_width="284dp"
            android:layout_height="93dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/texto_logo_app" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/usuario" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/register_name"
                style="@style/RegisterEditText" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/register_last_name"
                android:inputType="textPersonName"
                style="@style/RegisterEditText"  />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                style="@style/RegisterEditText"  />

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/register_pwd"
                android:inputType="textPassword"
                style="@style/RegisterEditText"  />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAceptar"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/register_accept"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:paddingBottom="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtYaCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/register_account"
                    android:textColor="@color/colorPrimary"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/btnIniciarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_session"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
