<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            app:srcCompat="@drawable/texto_logo_app" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"/>


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:text="@string/login_session"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:fontFamily="sans-serif"
            android:text="@string/login_register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txtOlvidarContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/forgot_pwd" />

        <!--
        <TextView
            android:id="@+id/lblIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Login_with"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnLoginGoogle"
                android:layout_width="46dp"
                android:layout_height="53dp"
                android:textAlignment="center"
                colo/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnloginFacebook"
                android:layout_width="46dp"
                android:layout_height="53dp"
                android:layout_marginLeft="30dp"
                android:textAlignment="center"
                android:textSize="15sp"/>

        </LinearLayout>
        -->

    </LinearLayout>

</ScrollView>
