<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.PasswordActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:srcCompat="@drawable/texto_logo_app"
                android:contentDescription="TODO" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtRestaurar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/ACT_Password_Reset"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="10"
                    android:hint="@string/ACT_Password_hint_email"
                    android:inputType="textPersonName"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textColorHighlight="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />

                <Button
                    android:id="@+id/btnAccept"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:onClick="onLogin"
                    android:text="@string/app_btnAceptar" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
